feat: split configuration into app and workload configs
