# pkg/domain/configuration.go
@@ -1,24 +1,0 @@
-package domain
-
-import "github.com/google/uuid"
-
-type ConfigurationFileRef struct {
-	Name       string `json:"name"`
-	Repository string `json:"repository"`
-	Ref        string `json:"ref,omitempty"`
-	Path       string `json:"path"`
-}
-
-type Configuration struct {
-	BaseModel
-
-	ApplicationID    uuid.UUID              `json:"application_id" db:"application_id"`
-	Name             string                 `json:"name" db:"name"`
-	Env              string                 `json:"env" db:"env"`
-	SourcePath       string                 `json:"source_path" db:"source_path"`
-	Files            []ConfigurationFileRef `json:"files,omitempty" db:"files"`
-	LatestRevisionNo int                    `json:"latest_revision_no" db:"latest_revision_no"`
-	LatestRevisionID *uuid.UUID             `json:"latest_revision_id,omitempty" db:"latest_revision_id"`
-}
-
-func (Configuration) CollectionName() string { return "configurations" }
