# pkg/router/configuration.go
@@ -1,17 +1,0 @@
-package router
-
-import (
-	"github.com/bsonger/devflow-config-service/pkg/api"
-	"github.com/gin-gonic/gin"
-)
-
-func RegisterConfigurationRoutes(rg *gin.RouterGroup) {
-	cfg := rg.Group("/configurations")
-
-	cfg.GET("", api.ConfigurationRouteApi.List)
-	cfg.GET("/:id", api.ConfigurationRouteApi.Get)
-	cfg.POST("", api.ConfigurationRouteApi.Create)
-	cfg.POST("/:id/sync", api.ConfigurationRouteApi.Sync)
-	cfg.PUT("/:id", api.ConfigurationRouteApi.Update)
-	cfg.DELETE("/:id", api.ConfigurationRouteApi.Delete)
-}
